# limur

./: Cargo.toml  README.md
clew/: Cargo.toml
clew-derive/src/: lib.rs
clew-desktop/src/: app.rs  window_manager.rs
clew-tiny-skia/: Cargo.toml
clew-tiny-skia/src/: lib.rs
clew-vello/: Cargo.toml
clew-vello/src/: lib.rs
clew-widgets/: Cargo.toml
clew-widgets/src/: lib.rs  shortcuts.rs
clew/examples/: animations.rs  counter.rs  custom_scroll_view.rs  groups.rs  layers.rs  shortcuts.rs  stress_test.rs  todo_list.rs  virtual_lists.rs  zindex.rs
clew/src/: animation.rs  foundation.rs  interaction.rs  io.rs  layer.rs  layout.rs  lib.rs  lifecycle.rs  profiler.rs  render.rs  shortcuts.rs  state.rs  text.rs  text_history.rs  widget_id.rs
clew/src/widgets/: builder.rs  decorated_box.rs  gesture_detector.rs  hstack.rs  layer.rs  list_view.rs  mod.rs  scroll_area.rs  stateful.rs  text.rs  virtual_list.rs  vstack.rs  widget.rs  zstack.rs
clew/src/widgets/editable_text/: commands.rs  interaction.rs  mod.rs  render.rs
limur/: Cargo.toml  README.md
limur-derive/: Cargo.toml  README.md
limur-derive/src/: lib.rs
limur-desktop/: Cargo.toml  README.md
limur-desktop/src/: app.rs  keyboard.rs  lib.rs  window.rs  window_manager.rs
limur-tiny-skia/: Cargo.toml  README.md
limur-tiny-skia/src/: lib.rs
limur-vello/: Cargo.toml  README.md
limur-vello/src/: README.md  lib.rs
limur-wgpu/: Cargo.toml
limur-wgpu/src/: backdrop_filter.rs  blit_renderer.rs  blur_renderer.rs  gpu_vec.rs  lib.rs  liquid_glass_renderer.rs  rect_renderer.rs  text.rs  vector_renderer.rs  vector_resources.rs
limur-wgpu/src/shaders/: backdrop_blur.wgsl  backdrop_filter.wgsl  blit.wgsl  blur.wgsl  liquid_glass.wgsl  rect.wgsl  vector.wgsl
limur-widgets/: Cargo.toml  LICENSE-MIT  README.md
limur-widgets/src/: lib.rs  shortcuts.rs
limur/examples/: animations.rs  counter.rs  custom_scroll_view.rs  groups.rs  layers.rs  render_test.rs  shortcuts.rs  stress_test.rs  subpixel_aa.rs  todo_list.rs  virtual_lists.rs  zindex.rs
limur/examples/assets/: arabic_text.txt  latin_text.txt
limur/src/: animation.rs  assets.rs  foundation.rs  identifiable.rs  interaction.rs  keyboard.rs  layer.rs  layout.rs  lib.rs  lifecycle.rs  profiler.rs  render.rs  shortcuts.rs  state.rs  text_data.rs  widget_id.rs
limur/src/widgets/: backdrop_filter.rs  builder.rs  component.rs  decorated_box.rs  for_each.rs  frame.rs  gap.rs  gesture_detector.rs  hstack.rs  layer.rs  list_view.rs  mod.rs  scope.rs  scroll_area.rs  shortcuts.rs  stateful.rs  svg.rs  text.rs  virtual_list.rs  vstack.rs  widget.rs  zstack.rs
limur/src/widgets/editable_text/: commands.rs  interaction.rs  mod.rs  render.rs
