[workspace]
resolver = "3"
members = [
    "clew",
    "clew-desktop",
    "clew-derive",
    "clew-tiny-skia",
    "clew-vello",
    "clew-widgets",
]

[workspace.dependencies]
log = "0.4"
glam = "0.30"
slotmap = "1"
cosmic-text = { version = "0.14" }
raw-window-handle = "0.6"
winit = "0.30"
string-interner = "0.19"
parking_lot = "0.12"
once_cell = "1.21"
usvg = "0.45"
resvg = "0.45"
bumpalo = { version = "3.19", features = ["collections", "boxed"] }
smallvec = "1.15.1"
strum = "0.27"
strum_macros = "0.27"

[patch.crates-io]
cosmic-text = { git = "https://github.com/tech-paws/cosmic-text.git", branch = "tech_paws" }
