[package]
name = "limur-derive"
version = "0.0.1"
edition = "2024"
authors = ["Andrei Kabylin <sys.int64@gmail.com>"]
description = "Procedural macros for the limur UI framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sysint64/limur"
readme = "README.md"
keywords = ["gui", "ui", "imgui", "immediate", "derive"]
categories = ["gui"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
