[package]
name = "limur-desktop"
version = "0.0.1"
edition = "2024"
authors = ["Andrei Kabylin <sys.int64@gmail.com>"]
description = "Desktop application runner for the limur UI framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sysint64/limur"
readme = "README.md"
keywords = ["gui", "ui", "imgui", "immediate", "desktop"]
categories = ["gui"]

[dependencies]
winit = { workspace = true }
log = { workspace = true }
slotmap = "1"
limur = { version = "0.0.2", path = "../limur" }
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
string-interner = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
bumpalo = { workspace = true }

[features]
default = ["tokio"]
async = ["tokio"]
