[package]
name = "limur-tiny-skia"
version = "0.0.1"
edition = "2024"
authors = ["Andrei Kabylin <sys.int64@gmail.com>"]
description = "Software renderer backend for the limur UI framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sysint64/limur"
readme = "README.md"
keywords = ["gui", "ui", "imgui", "immediate", "software"]
categories = ["gui"]

[dependencies]
tiny-skia = "0.11"
softbuffer = "0.4"
limur = { version = "0.0.1", path = "../limur" }
raw-window-handle = { workspace = true }
cosmic-text = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
